--- a/maquetacion/assets/css/style.css
+++ b/maquetacion/assets/css/style.css
@@ -105,4 +105,178 @@ a {
   height: 100%;
 }
 
+/* ----- MAIN ----- */
+.main {
+  margin: 5rem 8rem;
+}
+.main__welcome {
+  left: 30vw;
+  position: absolute;
+  text-align: center;
+  top: 20rem;
+}
+
+.welcome {
+  margin-bottom: 7rem;
+  text-align: center;
+}
+.welcome__tittle {
+  font-size: 3.2rem;
+  margin-bottom: 1.5rem;
+}
+.welcome__text {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+.welcome__search {
+  height: 4rem;
+}
+
+/* ----- FORMULARY -----*/
+.search__formulary input[type=submit], .search__formulary select {
+  background-color: #171E27;
+  color: #FFFFFF;
+  height: 100%;
+  text-align: center;
+}
+
+.search__formulary {
+  border-radius: 3rem;
+  box-shadow: 1px 1px 6px 0.1px black;
+  height: 100%;
+}
+.search__formulary select {
+  appearance: none;
+  background-image: url("../img/Vector.svg");
+  background-repeat: no-repeat;
+  background-position: center right 2rem;
+  border-bottom-left-radius: 3rem;
+  border-top-left-radius: 3rem;
+  width: 15.2rem;
+}
+.search__formulary input[type=search] {
+  background-color: rgba(197, 197, 197, 0.3);
+  border: none;
+  color: #FFFFFF;
+  height: 100%;
+  width: 30rem;
+}
+.search__formulary input[type=search]:focus-visible {
+  border: 0.1rem solid rgba(255, 255, 255, 0.2);
+  outline: none;
+  padding-left: 1rem;
+}
+.search__formulary input[type=submit] {
+  border: 0.1rem solid rgba(255, 255, 255, 0.1);
+  border-bottom-right-radius: 3rem;
+  border-top-right-radius: 3rem;
+  width: 12.4rem;
+}
+
+/* ----- POPULAR LOCATIONS ----- */
+.main__location, .main__recommended {
+  margin-bottom: 4rem;
+}
+
+.location__content {
+  display: flex;
+  justify-content: space-between;
+}
+.location__tittle {
+  margin-bottom: 2rem;
+}
+.location__city {
+  width: 20.8rem;
+  height: 7.2rem;
+  display: flex;
+  align-items: center;
+  background-color: #171E27;
+  border-radius: 0.8rem;
+}
+.location__city:hover {
+  border: 0.1rem solid rgba(192, 183, 183, 0.1);
+}
+
+.city__image {
+  width: 8rem;
+  height: 100%;
+  margin-right: 1.5rem;
+}
+.city__image img {
+  width: 100%;
+  height: 100%;
+  border-bottom-left-radius: 0.8rem;
+  border-top-left-radius: 0.8rem;
+}
+.city__title {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+.city__ammount {
+  font-size: 1.1rem;
+}
+
+/* ----- recommended Locations ----- */
+.recommended__title {
+  margin-bottom: 0.5rem;
+}
+
+.product__content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.product__items {
+  background-color: #171E27;
+  border-radius: 3.2rem;
+  width: 28rem;
+  height: 25rem;
+  margin-top: 1.5rem;
+}
+.product__items:hover {
+  border: 0.1rem solid rgba(192, 183, 183, 0.1);
+}
+.product__image {
+  width: 100%;
+  height: 13.5rem;
+}
+.product__image img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 3.2rem;
+  border-top-right-radius: 3.2rem;
+}
+.product__text {
+  margin: 1rem 2rem;
+}
+.product__text .text__price {
+  font-weight: bold;
+}
+.product__text .text__city {
+  margin-top: 0.5rem;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+.product__text .text__type {
+  margin-top: 0.5rem;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+.product__text .text__icon {
+  margin-top: 0.5rem;
+}
+.product__text .icon__container {
+  margin-right: 1rem;
+}
+.product__text .icon__container span {
+  font-size: 1rem;
+  margin-left: 0.3rem;
+}
+
+.text__all {
+  display: inline-block;
+  margin: 1rem 1.5rem;
+}
+
 /*# sourceMappingURL=style.css.map */
